--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
-    "Lingma.aI Chat.webToolsInAsk/AgentMode": "Auto-execute",
-    "Lingma.aI Chat.mcpToolsInAgentMode": true
+  "claude.autoApprove": true,
+  "claude.confirmShellExecution": false,
+"claude.confirmFileWrite": false,
+"claudeCode.allowDangerouslySkipPermissions": true,
+"claudeCode.environmentVariables": [],
+"claudeCode.initialPermissionMode": "plan",
+"claudeCode.useCtrlEnterToSend": false,
+"claudeCode.useTerminal": true
 }
